--- a/HID Simulator/HID Simulator.vcxproj.filters
+++ b/HID Simulator/HID Simulator.vcxproj.filters
@@ -47,5 +47,8 @@
     <ClInclude Include="state.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="tracing.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
